# DCRC

./: Safety report DCRC V0003 (Hessel  Joost).docx  UWBTest1.py
CoLabSoftware/: CoLAB_MQTTviewer.py  CoLAB_admin.py  CoLAB_config.py  CoLAB_main.py  CoLAB_restAPI_MiR.py  CoLAB_sendLocation.py  CoLAB_visualization.py  TCPClient.py  TCPServer.py  client.py  getStatus_Simulation.txt  server.py
Electric_schematics/: Electrical schematic holonomic platform.fzz  colab elec.fzz
Physical_System/: README.md
Physical_System/PCB_design/: PCB_CoLAB_Schematic_V2.brd  PCB_CoLAB_Schematic_V2.sch
Physical_System/Solidworks_Parts/CoLAB/: CoLAB_V2_Housing.SLDASM
Physical_System/Solidworks_Parts/Holonomic car/: lidar frame.SLDPRT
Reports/: UWB precicion test report DCRC V0002 (Max & Joost).docx
Reports/Solidworks_Parts/CoLAB/: CoLAB_Topplate_V2.SLDPRT  CoLAB_Topplate_V2_GPIOacces.SLDPRT  HoleSwitchV1.SLDPRT  PCBV2.SLDPRT  RockerSwitch.SLDPRT
Reports/Solidworks_Parts/CoLAB/raspberry-pi-4-model-b-1.snapshot.3/: Raspberry Pi 4 Model B.SLDASM
Reports/Solidworks_Parts/Holonomic car/: MotorShield + UWB tag mount V2.SLDPRT
RobotPackage/: package.xml  setup.cfg  setup.py
RobotPackage/RobotPackage/: Controller.py  Robot.py  TCPClient.py
RobotPackage/blackboard_interfaces/: CMakeLists.txt  bridge_mapping_rules.yaml  package.xml
RobotPackage/blackboard_interfaces/msg/: TaskMsg.msg
RobotPackage/install/: local_setup.sh  setup.sh
RobotPackage/install/blackboard_interfaces/share/blackboard_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
RobotPackage/install/blackboard_interfaces/share/blackboard_interfaces/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  rosidl_cmake-extras.cmake
RobotPackage/install/blackboard_interfaces/share/blackboard_interfaces/msg/: TaskMsg.idl
RobotPackage/log/: latest_build  latest_list
RobotPackage/src/RobotPackage/RobotPackage/: Controller.py  TCPServer.py
Solidworks_Parts/CoLAB/: CoLAB_V2.SLDPRT
Solidworks_Parts/Holonomic car/: HoleSwitchV2.SLDPRT  adapter motor wheel.SLDPRT  motor mount.SLDPRT
catkin_ws/devel/: .catkin  local_setup.sh
catkin_ws/devel/include/blackboard/: TaskCost.h  TaskMsg.h  TaskStateMsg.h  bbBackup.h  bbsynch.h
catkin_ws/devel/lib/pkgconfig/: bbinstance.pc  blackboard.pc  robot1.pc  rviz_tools_py.pc  simenv.pc  turtlebot3_description.pc
catkin_ws/src/bbinstance/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/bbinstance/launch/: blackboard.launch
catkin_ws/src/bbinstance/src/bbinstance/: blackboardinstance.py  gui.py  interface.py  interface.ui  markers.py  monitor.py  multi publisher.py  multi subscriber.py  robotInstance.py  robotInstance2.py  robotInstance3.py  robotInstance4.py  robotInstance5.py  taskview.py  taskview.ui
catkin_ws/src/blackboard/: CMakeLists.txt  setup.py
catkin_ws/src/blackboard/msg/: TaskCost.msg  TaskMsg.msg  TaskStateMsg.msg  bbBackup.msg  bbsynch.msg
catkin_ws/src/blackboard/src/blackboard/: Battery.py  Blackboard.py  Controller.py  Robot.py  RosCommunication.py  TCPClient.py  Task.py
catkin_ws/src/simulation/robot1/: CMakeLists.txt
catkin_ws/src/simulation/simenv/: CMakeLists.txt  package.xml
catkin_ws/src/simulation/simenv/launch/: simenv.launch
catkin_ws/src/simulation/simenv/maps/: aa.pgm  aa.yaml  env.pgm  env.yaml  mm.pgm  mm.yaml
catkin_ws/src/simulation/simenv/rviz/: rviz_trobots.rviz
catkin_ws/src/simulation/simenv/worlds/: aa(2).stl  en.dae  en.stl  env.dae  environment.world
catkin_ws/src/simulation/simenv/worlds/ee/: model.config  model.sdf
catkin_ws/src/simulation/simenv/worlds/enironmnt/: model.config  model.sdf
catkin_ws/src/simulation/simenv/worlds/envdae/: model.config  model.sdf
src/RobotPi/: package.xml  setup.cfg  setup.py
src/RobotPi/RobotPi/: Controller.py  Robot.py  robot.py
(+88 files in other folders)
