<?xml version="1.0"?>
<package format="2">
  <name>simenv</name>
  <version>0.0.0</version>
  <description>The simenv package contains the simulation envrionment and the robot description packages</description>


  <maintainer email="h.ayoub@fontys.nl">H.ayoub</maintainer>
  <license>BSD</license>



  <!-- <author email="h.ayoub@fontys.nl">H.ayoub</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>



  <export>


  </export>
</package>
